--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       text-align: center;
     }
 
-    form, .buttons, .filterBox {
+    form, .buttons {
       margin: 20px 0;
     }
 
@@ -68,7 +68,7 @@
         width: 100%;
       }
       thead {
-        display: none; /* Hide table header */
+        display: none;
       }
       tr {
         margin-bottom: 20px;
@@ -92,19 +92,25 @@
 <body>
   <h1>Deviations Tracker</h1>
 
-  <!-- Form for capturing: Asset Code, Photo, Description, Remedial Action -->
-  <form id="entryForm">
-    <label for="assetCodeSelect">Asset Code:</label>
-    <select id="assetCodeSelect" required>
-      <option value="">-- Loading codes... --</option>
-      <!-- We'll populate this with fetch('assetCodes.txt') -->
-    </select>
+  <!-- 
+    Single dropdown with:
+      - an "All Codes" option
+      - all codes from assetCodes.txt
+    If user picks "All Codes", the table shows *all* entries.
+    If user picks a specific code, we filter to that code only.
+  -->
+  <label for="assetCodeSelect">Asset Code / Filter:</label>
+  <select id="assetCodeSelect">
+    <!-- We'll add <option value="ALL">All Codes</option> plus the fetched codes -->
+  </select>
 
+  <!-- The Add Entry form fields -->
+  <form id="entryForm" style="margin-top: 20px;">
     <label for="imageInput">Photo:</label>
     <input 
       type="file" 
       id="imageInput" 
-      accept="image/*;capture=camera" 
+      accept="image/*;capture=camera"
       required
     >
 
@@ -121,12 +127,6 @@
     <button id="generatePdf">Generate PDF</button>
   </div>
 
-  <!-- Filter box for searching Asset Codes in the table -->
-  <div class="filterBox">
-    <label for="filterInput">Filter by Asset Code:</label>
-    <input type="text" id="filterInput" placeholder="Type part of an asset code...">
-  </div>
-
   <h2>Existing Entries</h2>
   <table id="entriesTable">
     <thead>
@@ -141,177 +141,189 @@
     <tbody></tbody>
   </table>
 
-  <!-- Load jsPDF from a CDN -->
+  <!-- jsPDF for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
-    // ------------------- Local Storage Data -------------------
+    // Our persistent array, stored in localStorage
     let entries = JSON.parse(localStorage.getItem('myAssetEntries') || '[]');
 
-    // Cached DOM Elements
-    const entryForm         = document.getElementById('entryForm');
+    // DOM elements
     const assetCodeSelect   = document.getElementById('assetCodeSelect');
+    const entryForm         = document.getElementById('entryForm');
     const imageInput        = document.getElementById('imageInput');
     const descriptionInput  = document.getElementById('descriptionInput');
     const remedialInput     = document.getElementById('remedialInput');
     const entriesTableBody  = document.querySelector('#entriesTable tbody');
     const generatePdfButton = document.getElementById('generatePdf');
-    const filterInput       = document.getElementById('filterInput');
 
-    // 1) Load asset codes from assetCodes.txt
+    // 1) Fetch asset codes from assetCodes.txt
+    //    We'll add an "ALL" option, then append the lines from the text file.
     fetch('assetCodes.txt')
       .then(response => response.text())
       .then(textData => {
-        // Each line is one asset code
+        // Make the first option be "ALL"
+        assetCodeSelect.innerHTML = '<option value="ALL">-- All Codes --</option>';
+
+        // Convert lines to array
         const lines = textData
           .split('\n')
           .map(line => line.trim())
           .filter(line => line);
 
-        // Clear the default placeholder option
-        assetCodeSelect.innerHTML = '<option value="">-- Select an asset code --</option>';
-
-        // Populate the dropdown
+        // For each line, create an <option>
         lines.forEach(line => {
           const opt = document.createElement('option');
           opt.value = line;
           opt.textContent = line;
           assetCodeSelect.appendChild(opt);
         });
+
+        // After loading codes, let's render the table
+        renderEntries();
       })
       .catch(err => {
         console.error('Error loading assetCodes.txt:', err);
-        assetCodeSelect.innerHTML = '<option value="">-- Failed to load codes --</option>';
+        // Fall back if text file fails
+        assetCodeSelect.innerHTML = `
+          <option value="ALL">-- All Codes --</option>
+          <option value="">-- Failed to load codes --</option>
+        `;
+        renderEntries();
       });
 
-    // 2) Render table
+    // 2) Whenever user selects a code or "ALL", re-render
+    assetCodeSelect.addEventListener('change', () => {
+      renderEntries();
+    });
+
+    // 3) Render table function
     function renderEntries() {
       entriesTableBody.innerHTML = '';
 
-      // Filter logic
-      const filterValue = filterInput.value.toLowerCase();
-      const filtered = entries.filter(e =>
-        e.assetCode.toLowerCase().includes(filterValue)
-      );
+      const selectedCode = assetCodeSelect.value; // can be "ALL" or a real code
 
-      // Build the table rows from filtered entries
-      filtered.forEach((entry, index) => {
-        const row = document.createElement('tr');
+      // Loop over the FULL entries array
+      entries.forEach((entry, realIndex) => {
+        // If "ALL" is selected, we always show.
+        // Otherwise, only show if it matches the selected code
+        if (selectedCode === 'ALL' || entry.assetCode === selectedCode) {
+          const row = document.createElement('tr');
 
-        // Asset Code cell
-        const assetCell = document.createElement('td');
-        assetCell.setAttribute('data-label', 'Asset Code');
-        const assetArea = document.createElement('textarea');
-        assetArea.value = entry.assetCode;
-        assetArea.rows  = 1;
-        assetArea.style.width = '100%';
-        assetArea.onchange = function() {
-          entries[index].assetCode = this.value;
-          saveEntries();
-        };
-        assetCell.appendChild(assetArea);
-        row.appendChild(assetCell);
+          // Asset Code cell
+          const assetCell = document.createElement('td');
+          assetCell.setAttribute('data-label', 'Asset Code');
+          // Just show the code as text or an input?
+          // We'll make it an editable <textarea> to match your original
+          const assetArea = document.createElement('textarea');
+          assetArea.value = entry.assetCode;
+          assetArea.rows  = 1;
+          assetArea.style.width = '100%';
+          assetArea.onchange = () => {
+            // Update the actual array item
+            entries[realIndex].assetCode = assetArea.value;
+            saveEntries();
+          };
+          assetCell.appendChild(assetArea);
+          row.appendChild(assetCell);
 
-        // Photo cell
-        const photoCell = document.createElement('td');
-        photoCell.setAttribute('data-label', 'Photo');
-        const img = document.createElement('img');
-        img.src = entry.image; // base64 data
-        photoCell.appendChild(img);
-        row.appendChild(photoCell);
+          // Photo cell
+          const photoCell = document.createElement('td');
+          photoCell.setAttribute('data-label', 'Photo');
+          const img = document.createElement('img');
+          img.src = entry.image; // base64 data
+          photoCell.appendChild(img);
+          row.appendChild(photoCell);
 
-        // Description cell
-        const descCell = document.createElement('td');
-        descCell.setAttribute('data-label', 'Description');
-        const descArea = document.createElement('textarea');
-        descArea.value = entry.description;
-        descArea.rows  = 2;
-        descArea.style.width = '100%';
-        descArea.onchange = function() {
-          entries[index].description = this.value;
-          saveEntries();
-        };
-        descCell.appendChild(descArea);
-        row.appendChild(descCell);
+          // Description cell
+          const descCell = document.createElement('td');
+          descCell.setAttribute('data-label', 'Description');
+          const descArea = document.createElement('textarea');
+          descArea.value = entry.description;
+          descArea.rows  = 2;
+          descArea.style.width = '100%';
+          descArea.onchange = () => {
+            entries[realIndex].description = descArea.value;
+            saveEntries();
+          };
+          descCell.appendChild(descArea);
+          row.appendChild(descCell);
 
-        // Remedial Action cell
-        const remedialCell = document.createElement('td');
-        remedialCell.setAttribute('data-label', 'Remedial Action');
-        const remedialArea = document.createElement('textarea');
-        remedialArea.value = entry.remedial;
-        remedialArea.rows  = 2;
-        remedialArea.style.width = '100%';
-        remedialArea.onchange = function() {
-          entries[index].remedial = this.value;
-          saveEntries();
-        };
-        remedialCell.appendChild(remedialArea);
-        row.appendChild(remedialCell);
+          // Remedial Action cell
+          const remedialCell = document.createElement('td');
+          remedialCell.setAttribute('data-label', 'Remedial Action');
+          const remedialArea = document.createElement('textarea');
+          remedialArea.value = entry.remedial;
+          remedialArea.rows  = 2;
+          remedialArea.style.width = '100%';
+          remedialArea.onchange = () => {
+            entries[realIndex].remedial = remedialArea.value;
+            saveEntries();
+          };
+          remedialCell.appendChild(remedialArea);
+          row.appendChild(remedialCell);
 
-        // Actions cell (Delete button)
-        const actionsCell = document.createElement('td');
-        actionsCell.setAttribute('data-label', 'Actions');
-        const deleteBtn = document.createElement('button');
-        deleteBtn.textContent = 'Delete';
-        deleteBtn.onclick = () => {
-          entries.splice(index, 1);
-          saveEntries();
-          renderEntries();
-        };
-        actionsCell.appendChild(deleteBtn);
-        row.appendChild(actionsCell);
+          // Actions cell
+          const actionsCell = document.createElement('td');
+          actionsCell.setAttribute('data-label', 'Actions');
+          const deleteBtn = document.createElement('button');
+          deleteBtn.textContent = 'Delete';
+          deleteBtn.onclick = () => {
+            entries.splice(realIndex, 1);
+            saveEntries();
+            renderEntries();
+          };
+          actionsCell.appendChild(deleteBtn);
+          row.appendChild(actionsCell);
 
-        entriesTableBody.appendChild(row);
+          entriesTableBody.appendChild(row);
+        }
       });
     }
 
-    // 3) Save to localStorage
+    // 4) Save to localStorage
     function saveEntries() {
       localStorage.setItem('myAssetEntries', JSON.stringify(entries));
     }
 
-    // 4) Handle Form Submission
-    entryForm.addEventListener('submit', (e) => {
+    // 5) Handle form submission: Add a new entry under whichever code is selected
+    entryForm.addEventListener('submit', e => {
       e.preventDefault();
 
-      const assetCode   = assetCodeSelect.value;
+      const codeChoice  = assetCodeSelect.value;
       const file        = imageInput.files[0];
       const description = descriptionInput.value.trim();
       const remedial    = remedialInput.value.trim();
 
-      if (!assetCode) {
-        alert("Please select an asset code.");
+      // We do not allow adding an entry if "ALL" is chosen. Must pick a real code.
+      if (codeChoice === 'ALL' || !codeChoice) {
+        alert('Please pick a specific Asset Code before adding an entry.');
         return;
       }
       if (!file) {
-        alert("Please select a photo.");
+        alert('Please select a photo.');
         return;
       }
       if (!description || !remedial) {
-        alert("Please fill out all fields.");
+        alert('Please fill out the description and remedial action.');
         return;
       }
 
-      // Convert the photo to base64
+      // Convert photo to base64
       const reader = new FileReader();
       reader.onload = function(event) {
-        const imageData = event.target.result; 
-        // Add new entry
+        const imageData = event.target.result;
         entries.push({
-          assetCode:   assetCode,
-          image:       imageData, // base64
+          assetCode:   codeChoice,
+          image:       imageData,
           description: description,
           remedial:    remedial
         });
         saveEntries();
         renderEntries();
+        // Reset the form
         entryForm.reset();
       };
       reader.readAsDataURL(file);
-    });
-
-    // 5) Filter as you type
-    filterInput.addEventListener('input', () => {
-      renderEntries();
     });
 
     // 6) Generate PDF
@@ -319,12 +331,7 @@
       const { jsPDF } = window.jspdf;
       const doc       = new jsPDF('p', 'pt', 'letter');
 
-      // We'll define 4 columns in a manual table approach:
-      //   1) Asset Code
-      //   2) Photo
-      //   3) Description
-      //   4) Remedial Action
-
+      // Manual columns: 1) Asset Code 2) Photo 3) Description 4) Remedial
       const startX       = 40;
       let currentY       = 40;
       const colAssetW    = 90;
@@ -338,74 +345,76 @@
       doc.text('Asset Table', startX, currentY);
       currentY += 10;
 
-      // Draw header row
+      // Draw header
       const headerHeight = 30;
       drawRowBorder(currentY, headerHeight);
       doc.setFontSize(12);
-      doc.text('Asset',       startX + 5,                               currentY + 18);
-      doc.text('Photo',       startX + colAssetW + 5,                   currentY + 18);
-      doc.text('Description', startX + colAssetW + colPhotoW + 5,       currentY + 18);
+      doc.text('Asset',       startX + 5,                              currentY + 18);
+      doc.text('Photo',       startX + colAssetW + 5,                  currentY + 18);
+      doc.text('Description', startX + colAssetW + colPhotoW + 5,      currentY + 18);
       doc.text('Remedial',    startX + colAssetW + colPhotoW + colDescW + 5, currentY + 18);
       currentY += headerHeight;
 
-      // Filtered entries (based on filter box) to include in PDF
-      const filterValue = filterInput.value.toLowerCase();
-      const filtered = entries.filter(e => e.assetCode.toLowerCase().includes(filterValue));
+      // Show either all or just the chosen code
+      const chosenCode = assetCodeSelect.value;
+      entries.forEach(entry => {
+        // If "ALL" is chosen, print all. Otherwise only matching code.
+        if (chosenCode === 'ALL' || entry.assetCode === chosenCode) {
+          // Draw the row border
+          drawRowBorder(currentY, rowHeight);
 
-      // For each filtered entry, draw a row
-      filtered.forEach(entry => {
-        drawRowBorder(currentY, rowHeight);
+          // Asset Code
+          doc.setFontSize(10);
+          const assetX = startX + 5;
+          const assetY = currentY + 20;
+          const assetW_ = colAssetW - 10;
+          const assetLines = doc.splitTextToSize(entry.assetCode, assetW_);
+          doc.text(assetLines, assetX, assetY);
 
-        doc.setFontSize(10);
-        // Asset Code
-        const assetX = startX + 5;
-        const assetY = currentY + 20;
-        const assetW_ = colAssetW - 10;
-        const assetLines = doc.splitTextToSize(entry.assetCode, assetW_);
-        doc.text(assetLines, assetX, assetY);
+          // Photo
+          const imgX = startX + colAssetW + 5;
+          const maxImgWidth  = colPhotoW - 10;
+          const maxImgHeight = rowHeight - 10;
+          try {
+            const isPng  = (entry.image || '').toLowerCase().includes('image/png');
+            const format = isPng ? 'PNG' : 'JPEG';
+            const imgProps = doc.getImageProperties(entry.image);
+            let iWidth  = imgProps.width;
+            let iHeight = imgProps.height;
+            // Scale down if needed
+            const ratio = Math.min(maxImgWidth / iWidth, maxImgHeight / iHeight);
+            iWidth  *= ratio;
+            iHeight *= ratio;
+            const yOffset = (rowHeight - iHeight) / 2;
+            doc.addImage(entry.image, format, imgX, currentY + yOffset, iWidth, iHeight);
+          } catch (err) {
+            console.error('Image error:', err);
+          }
 
-        // Photo
-        const imgX = startX + colAssetW + 5;
-        const maxImgWidth  = colPhotoW - 10;
-        const maxImgHeight = rowHeight - 10;
-        try {
-          const isPng  = (entry.image || '').toLowerCase().includes('image/png');
-          const format = isPng ? 'PNG' : 'JPEG';
-          const imgProps = doc.getImageProperties(entry.image);
-          let iWidth  = imgProps.width;
-          let iHeight = imgProps.height;
-          // Scale down if needed
-          const ratio = Math.min(maxImgWidth / iWidth, maxImgHeight / iHeight);
-          iWidth  *= ratio;
-          iHeight *= ratio;
-          const yOffset = (rowHeight - iHeight) / 2;
-          doc.addImage(entry.image, format, imgX, currentY + yOffset, iWidth, iHeight);
-        } catch (err) {
-          console.error('Image error:', err);
-        }
+          // Description
+          const descX = startX + colAssetW + colPhotoW + 5;
+          const descY = currentY + 20;
+          const descW_ = colDescW - 10;
+          const descLines = doc.splitTextToSize(entry.description, descW_);
+          doc.text(descLines, descX, descY);
 
-        // Description
-        const descX = startX + colAssetW + colPhotoW + 5;
-        const descY = currentY + 20;
-        const descW_ = colDescW - 10;
-        const descLines = doc.splitTextToSize(entry.description, descW_);
-        doc.text(descLines, descX, descY);
+          // Remedial
+          const remedX = startX + colAssetW + colPhotoW + colDescW + 5;
+          const remedY = currentY + 20;
+          const remedW_ = colRemedialW - 10;
+          const remedLines = doc.splitTextToSize(entry.remedial, remedW_);
+          doc.text(remedLines, remedX, remedY);
 
-        // Remedial
-        const remedX = startX + colAssetW + colPhotoW + colDescW + 5;
-        const remedY = currentY + 20;
-        const remedW_ = colRemedialW - 10;
-        const remedLines = doc.splitTextToSize(entry.remedial, remedW_);
-        doc.text(remedLines, remedX, remedY);
-
-        currentY += rowHeight;
-        // If near bottom of page, start a new page
-        if (currentY > 740) {
-          doc.addPage();
-          currentY = 40;
+          currentY += rowHeight;
+          // If near bottom, new page
+          if (currentY > 740) {
+            doc.addPage();
+            currentY = 40;
+          }
         }
       });
 
+      // Helper: draw row borders
       function drawRowBorder(y, height) {
         doc.line(startX, y,            startX + tableW, y);
         doc.line(startX, y + height,   startX + tableW, y + height);
@@ -418,12 +427,13 @@
         doc.line(startX + tableW, y,   startX + tableW, y + height);
       }
 
-      // Save PDF
       doc.save('entries.pdf');
     });
 
-    // On page load, render once
-    renderEntries();
+    // Done! If codes are already loaded, or once loaded, we'll render automatically.
+    // If you want to force an immediate render prior to fetch, you can do:
+    //   renderEntries(); 
+    // But we do it inside the .then(...) of the fetch above.
   </script>
 </body>
 </html>
