--- a/index.html
+++ b/index.html
@@ -93,19 +93,25 @@
   <h1>Deviations Tracker</h1>
 
   <!-- 
-    Single dropdown with:
-      - an "All Codes" option
-      - all codes from assetCodes.txt
-    If user picks "All Codes", the table shows *all* entries.
-    If user picks a specific code, we filter to that code only.
+    We have a single <input> for the user to type or pick an asset code.
+    A <datalist> with suggestions from assetCodes.txt is attached so user sees "auto-complete".
+    
+    This same input is used for:
+      1) Searching/filtering the table in real-time.
+      2) Specifying the "code" for a new entry.
   -->
-  <label for="assetCodeSelect">Asset Code / Filter:</label>
-  <select id="assetCodeSelect">
-    <!-- We'll add <option value="ALL">All Codes</option> plus the fetched codes -->
-  </select>
+  <label for="searchCodeInput">Asset Code (Search or type custom):</label>
+  <input 
+    type="text" 
+    id="searchCodeInput" 
+    placeholder="e.g. 131-CON-01..."
+    list="codeSuggestions" 
+  />
+  <!-- A datalist for suggestions -->
+  <datalist id="codeSuggestions"></datalist>
 
-  <!-- The Add Entry form fields -->
-  <form id="entryForm" style="margin-top: 20px;">
+  <!-- The Add Entry form: just the rest of fields -->
+  <form id="entryForm">
     <label for="imageInput">Photo:</label>
     <input 
       type="file" 
@@ -141,14 +147,15 @@
     <tbody></tbody>
   </table>
 
-  <!-- jsPDF for PDF generation -->
+  <!-- jsPDF from CDN for PDF generation -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
-    // Our persistent array, stored in localStorage
+    // Our array of entries, stored in localStorage
     let entries = JSON.parse(localStorage.getItem('myAssetEntries') || '[]');
 
     // DOM elements
-    const assetCodeSelect   = document.getElementById('assetCodeSelect');
+    const searchCodeInput   = document.getElementById('searchCodeInput');
+    const codeSuggestions   = document.getElementById('codeSuggestions');
     const entryForm         = document.getElementById('entryForm');
     const imageInput        = document.getElementById('imageInput');
     const descriptionInput  = document.getElementById('descriptionInput');
@@ -156,182 +163,167 @@
     const entriesTableBody  = document.querySelector('#entriesTable tbody');
     const generatePdfButton = document.getElementById('generatePdf');
 
-    // 1) Fetch asset codes from assetCodes.txt
-    //    We'll add an "ALL" option, then append the lines from the text file.
+    // 1) Load codes from assetCodes.txt and populate <datalist>
     fetch('assetCodes.txt')
-      .then(response => response.text())
-      .then(textData => {
-        // Make the first option be "ALL"
-        assetCodeSelect.innerHTML = '<option value="ALL">-- All Codes --</option>';
-
-        // Convert lines to array
-        const lines = textData
+      .then(res => res.text())
+      .then(data => {
+        const lines = data
           .split('\n')
           .map(line => line.trim())
-          .filter(line => line);
+          .filter(line => line !== '');
 
-        // For each line, create an <option>
+        // For each code line, create an <option> in codeSuggestions
         lines.forEach(line => {
           const opt = document.createElement('option');
           opt.value = line;
-          opt.textContent = line;
-          assetCodeSelect.appendChild(opt);
+          codeSuggestions.appendChild(opt);
         });
-
-        // After loading codes, let's render the table
-        renderEntries();
       })
       .catch(err => {
-        console.error('Error loading assetCodes.txt:', err);
-        // Fall back if text file fails
-        assetCodeSelect.innerHTML = `
-          <option value="ALL">-- All Codes --</option>
-          <option value="">-- Failed to load codes --</option>
-        `;
-        renderEntries();
+        console.error('Failed to load assetCodes.txt', err);
       });
 
-    // 2) Whenever user selects a code or "ALL", re-render
-    assetCodeSelect.addEventListener('change', () => {
-      renderEntries();
-    });
-
-    // 3) Render table function
+    // 2) Render the table (filtered by what's typed in searchCodeInput)
     function renderEntries() {
       entriesTableBody.innerHTML = '';
 
-      const selectedCode = assetCodeSelect.value; // can be "ALL" or a real code
+      const searchVal = searchCodeInput.value.trim().toLowerCase();
+      // If searchVal is empty => show all
+      // Otherwise, show only the ones that contain that substring (case-insensitive)
+      let filteredEntries = entries;
+      if (searchVal) {
+        filteredEntries = entries.filter(e =>
+          e.assetCode.toLowerCase().includes(searchVal)
+        );
+      }
 
-      // Loop over the FULL entries array
-      entries.forEach((entry, realIndex) => {
-        // If "ALL" is selected, we always show.
-        // Otherwise, only show if it matches the selected code
-        if (selectedCode === 'ALL' || entry.assetCode === selectedCode) {
-          const row = document.createElement('tr');
+      // Build rows from filteredEntries
+      filteredEntries.forEach((entry, realIndex) => {
+        const row = document.createElement('tr');
 
-          // Asset Code cell
-          const assetCell = document.createElement('td');
-          assetCell.setAttribute('data-label', 'Asset Code');
-          // Just show the code as text or an input?
-          // We'll make it an editable <textarea> to match your original
-          const assetArea = document.createElement('textarea');
-          assetArea.value = entry.assetCode;
-          assetArea.rows  = 1;
-          assetArea.style.width = '100%';
-          assetArea.onchange = () => {
-            // Update the actual array item
-            entries[realIndex].assetCode = assetArea.value;
-            saveEntries();
-          };
-          assetCell.appendChild(assetArea);
-          row.appendChild(assetCell);
+        // Asset Code
+        const assetTd = document.createElement('td');
+        assetTd.setAttribute('data-label', 'Asset Code');
+        const assetArea = document.createElement('textarea');
+        assetArea.value = entry.assetCode;
+        assetArea.rows = 1;
+        assetArea.style.width = '100%';
+        assetArea.onchange = () => {
+          entries[realIndex].assetCode = assetArea.value;
+          saveEntries();
+          // Possibly re-filter if you want real-time updates
+          renderEntries();
+        };
+        assetTd.appendChild(assetArea);
+        row.appendChild(assetTd);
 
-          // Photo cell
-          const photoCell = document.createElement('td');
-          photoCell.setAttribute('data-label', 'Photo');
-          const img = document.createElement('img');
-          img.src = entry.image; // base64 data
-          photoCell.appendChild(img);
-          row.appendChild(photoCell);
+        // Photo
+        const photoTd = document.createElement('td');
+        photoTd.setAttribute('data-label', 'Photo');
+        const img = document.createElement('img');
+        img.src = entry.image;
+        photoTd.appendChild(img);
+        row.appendChild(photoTd);
 
-          // Description cell
-          const descCell = document.createElement('td');
-          descCell.setAttribute('data-label', 'Description');
-          const descArea = document.createElement('textarea');
-          descArea.value = entry.description;
-          descArea.rows  = 2;
-          descArea.style.width = '100%';
-          descArea.onchange = () => {
-            entries[realIndex].description = descArea.value;
-            saveEntries();
-          };
-          descCell.appendChild(descArea);
-          row.appendChild(descCell);
+        // Description
+        const descTd = document.createElement('td');
+        descTd.setAttribute('data-label', 'Description');
+        const descArea = document.createElement('textarea');
+        descArea.value = entry.description;
+        descArea.rows = 2;
+        descArea.style.width = '100%';
+        descArea.onchange = () => {
+          entries[realIndex].description = descArea.value;
+          saveEntries();
+        };
+        descTd.appendChild(descArea);
+        row.appendChild(descTd);
 
-          // Remedial Action cell
-          const remedialCell = document.createElement('td');
-          remedialCell.setAttribute('data-label', 'Remedial Action');
-          const remedialArea = document.createElement('textarea');
-          remedialArea.value = entry.remedial;
-          remedialArea.rows  = 2;
-          remedialArea.style.width = '100%';
-          remedialArea.onchange = () => {
-            entries[realIndex].remedial = remedialArea.value;
-            saveEntries();
-          };
-          remedialCell.appendChild(remedialArea);
-          row.appendChild(remedialCell);
+        // Remedial
+        const remTd = document.createElement('td');
+        remTd.setAttribute('data-label', 'Remedial Action');
+        const remArea = document.createElement('textarea');
+        remArea.value = entry.remedial;
+        remArea.rows = 2;
+        remArea.style.width = '100%';
+        remArea.onchange = () => {
+          entries[realIndex].remedial = remArea.value;
+          saveEntries();
+        };
+        remTd.appendChild(remArea);
+        row.appendChild(remTd);
 
-          // Actions cell
-          const actionsCell = document.createElement('td');
-          actionsCell.setAttribute('data-label', 'Actions');
-          const deleteBtn = document.createElement('button');
-          deleteBtn.textContent = 'Delete';
-          deleteBtn.onclick = () => {
-            entries.splice(realIndex, 1);
-            saveEntries();
-            renderEntries();
-          };
-          actionsCell.appendChild(deleteBtn);
-          row.appendChild(actionsCell);
+        // Actions
+        const actionsTd = document.createElement('td');
+        actionsTd.setAttribute('data-label', 'Actions');
+        const deleteBtn = document.createElement('button');
+        deleteBtn.textContent = 'Delete';
+        deleteBtn.onclick = () => {
+          entries.splice(realIndex, 1);
+          saveEntries();
+          renderEntries();
+        };
+        actionsTd.appendChild(deleteBtn);
+        row.appendChild(actionsTd);
 
-          entriesTableBody.appendChild(row);
-        }
+        entriesTableBody.appendChild(row);
       });
     }
 
-    // 4) Save to localStorage
+    // 3) Save to localStorage
     function saveEntries() {
       localStorage.setItem('myAssetEntries', JSON.stringify(entries));
     }
 
-    // 5) Handle form submission: Add a new entry under whichever code is selected
+    // 4) Add new entry
     entryForm.addEventListener('submit', e => {
       e.preventDefault();
 
-      const codeChoice  = assetCodeSelect.value;
-      const file        = imageInput.files[0];
-      const description = descriptionInput.value.trim();
-      const remedial    = remedialInput.value.trim();
+      const code = searchCodeInput.value.trim(); // user can type partial or custom
+      const file = imageInput.files[0];
+      const desc = descriptionInput.value.trim();
+      const remd = remedialInput.value.trim();
 
-      // We do not allow adding an entry if "ALL" is chosen. Must pick a real code.
-      if (codeChoice === 'ALL' || !codeChoice) {
-        alert('Please pick a specific Asset Code before adding an entry.');
+      if (!code) {
+        alert('Please type or pick an Asset Code before adding an entry.');
         return;
       }
       if (!file) {
         alert('Please select a photo.');
         return;
       }
-      if (!description || !remedial) {
-        alert('Please fill out the description and remedial action.');
+      if (!desc || !remd) {
+        alert('Please fill out the Description and Remedial fields.');
         return;
       }
 
-      // Convert photo to base64
       const reader = new FileReader();
-      reader.onload = function(event) {
-        const imageData = event.target.result;
+      reader.onload = function(evt) {
+        const imageData = evt.target.result;
         entries.push({
-          assetCode:   codeChoice,
-          image:       imageData,
-          description: description,
-          remedial:    remedial
+          assetCode: code,
+          image: imageData,
+          description: desc,
+          remedial: remd
         });
         saveEntries();
         renderEntries();
-        // Reset the form
+        // Clear form
         entryForm.reset();
       };
       reader.readAsDataURL(file);
     });
 
-    // 6) Generate PDF
+    // 5) Real-time filter: every time user types in the code input, re-render
+    searchCodeInput.addEventListener('input', () => {
+      renderEntries();
+    });
+
+    // 6) Generate PDF of the currently displayed rows
     generatePdfButton.addEventListener('click', () => {
       const { jsPDF } = window.jspdf;
       const doc       = new jsPDF('p', 'pt', 'letter');
 
-      // Manual columns: 1) Asset Code 2) Photo 3) Description 4) Remedial
       const startX       = 40;
       let currentY       = 40;
       const colAssetW    = 90;
@@ -345,7 +337,7 @@
       doc.text('Asset Table', startX, currentY);
       currentY += 10;
 
-      // Draw header
+      // Header
       const headerHeight = 30;
       drawRowBorder(currentY, headerHeight);
       doc.setFontSize(12);
@@ -355,66 +347,68 @@
       doc.text('Remedial',    startX + colAssetW + colPhotoW + colDescW + 5, currentY + 18);
       currentY += headerHeight;
 
-      // Show either all or just the chosen code
-      const chosenCode = assetCodeSelect.value;
-      entries.forEach(entry => {
-        // If "ALL" is chosen, print all. Otherwise only matching code.
-        if (chosenCode === 'ALL' || entry.assetCode === chosenCode) {
-          // Draw the row border
-          drawRowBorder(currentY, rowHeight);
+      // Filter again as in renderEntries
+      const searchVal = searchCodeInput.value.trim().toLowerCase();
+      let filteredEntries = entries;
+      if (searchVal) {
+        filteredEntries = entries.filter(e => 
+          e.assetCode.toLowerCase().includes(searchVal)
+        );
+      }
 
-          // Asset Code
-          doc.setFontSize(10);
-          const assetX = startX + 5;
-          const assetY = currentY + 20;
-          const assetW_ = colAssetW - 10;
-          const assetLines = doc.splitTextToSize(entry.assetCode, assetW_);
-          doc.text(assetLines, assetX, assetY);
+      // Rows
+      filteredEntries.forEach(entry => {
+        drawRowBorder(currentY, rowHeight);
 
-          // Photo
-          const imgX = startX + colAssetW + 5;
-          const maxImgWidth  = colPhotoW - 10;
-          const maxImgHeight = rowHeight - 10;
-          try {
-            const isPng  = (entry.image || '').toLowerCase().includes('image/png');
-            const format = isPng ? 'PNG' : 'JPEG';
-            const imgProps = doc.getImageProperties(entry.image);
-            let iWidth  = imgProps.width;
-            let iHeight = imgProps.height;
-            // Scale down if needed
-            const ratio = Math.min(maxImgWidth / iWidth, maxImgHeight / iHeight);
-            iWidth  *= ratio;
-            iHeight *= ratio;
-            const yOffset = (rowHeight - iHeight) / 2;
-            doc.addImage(entry.image, format, imgX, currentY + yOffset, iWidth, iHeight);
-          } catch (err) {
-            console.error('Image error:', err);
-          }
+        doc.setFontSize(10);
 
-          // Description
-          const descX = startX + colAssetW + colPhotoW + 5;
-          const descY = currentY + 20;
-          const descW_ = colDescW - 10;
-          const descLines = doc.splitTextToSize(entry.description, descW_);
-          doc.text(descLines, descX, descY);
+        // Asset Code
+        const assetX = startX + 5;
+        const assetY = currentY + 20;
+        const assetW_ = colAssetW - 10;
+        const lines = doc.splitTextToSize(entry.assetCode, assetW_);
+        doc.text(lines, assetX, assetY);
 
-          // Remedial
-          const remedX = startX + colAssetW + colPhotoW + colDescW + 5;
-          const remedY = currentY + 20;
-          const remedW_ = colRemedialW - 10;
-          const remedLines = doc.splitTextToSize(entry.remedial, remedW_);
-          doc.text(remedLines, remedX, remedY);
+        // Photo
+        const imgX = startX + colAssetW + 5;
+        const maxImgWidth  = colPhotoW - 10;
+        const maxImgHeight = rowHeight - 10;
+        try {
+          const isPng  = (entry.image || '').toLowerCase().includes('image/png');
+          const format = isPng ? 'PNG' : 'JPEG';
+          const props = doc.getImageProperties(entry.image);
+          let iWidth  = props.width;
+          let iHeight = props.height;
+          const ratio = Math.min(maxImgWidth / iWidth, maxImgHeight / iHeight);
+          iWidth  *= ratio;
+          iHeight *= ratio;
+          const yOffset = (rowHeight - iHeight) / 2;
+          doc.addImage(entry.image, format, imgX, currentY + yOffset, iWidth, iHeight);
+        } catch (err) {
+          console.error('Image error:', err);
+        }
 
-          currentY += rowHeight;
-          // If near bottom, new page
-          if (currentY > 740) {
-            doc.addPage();
-            currentY = 40;
-          }
+        // Description
+        const descX = startX + colAssetW + colPhotoW + 5;
+        const descY = currentY + 20;
+        const descW_ = colDescW - 10;
+        const descLines = doc.splitTextToSize(entry.description, descW_);
+        doc.text(descLines, descX, descY);
+
+        // Remedial
+        const remedX = startX + colAssetW + colPhotoW + colDescW + 5;
+        const remedY = currentY + 20;
+        const remedW_ = colRemedialW - 10;
+        const remedLines = doc.splitTextToSize(entry.remedial, remedW_);
+        doc.text(remedLines, remedX, remedY);
+
+        currentY += rowHeight;
+        if (currentY > 740) {
+          doc.addPage();
+          currentY = 40;
         }
       });
 
-      // Helper: draw row borders
       function drawRowBorder(y, height) {
         doc.line(startX, y,            startX + tableW, y);
         doc.line(startX, y + height,   startX + tableW, y + height);
@@ -430,10 +424,9 @@
       doc.save('entries.pdf');
     });
 
-    // Done! If codes are already loaded, or once loaded, we'll render automatically.
-    // If you want to force an immediate render prior to fetch, you can do:
-    //   renderEntries(); 
-    // But we do it inside the .then(...) of the fetch above.
+    // 7) On load, render once (in case there are existing localStorage entries)
+    //    We'll do it *after* we set up everything, so the user sees the table.
+    renderEntries();
   </script>
 </body>
 </html>
